--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                          <div class="col-lg-8 col-md-10 mx-auto col-12">
                               <div class="hero-text mt-5 text-center">
 
-                                    <h6 data-aos="fade-up" data-aos-delay="300">new way to build a healthy lifestyle!</h6>
+                                    <h6 data-aos="fade-up" data-aos-delay="300">Testing</h6>
 
                                     <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Upgrade your body at Gymso Fitness</h1>
 
