--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Gymso Fitness HTML Template</title>
+     <title>PCM CLASSES</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -14,13 +14,6 @@
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/aos.css">
-
-     <!-- MAIN CSS -->
-     <link rel="stylesheet" href="css/tooplate-gymso-style.css">
-<!--
-Tooplate 2119 Gymso Fitness
-https://www.tooplate.com/view/2119-gymso-fitness
--->
 </head>
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
@@ -80,9 +73,9 @@ https://www.tooplate.com/view/2119-gymso-fitness
                          <div class="col-lg-8 col-md-10 mx-auto col-12">
                               <div class="hero-text mt-5 text-center">
 
-                                    <h6 data-aos="fade-up" data-aos-delay="300">Testing</h6>
+                                    <h6 data-aos="fade-up" data-aos-delay="300">Learning through a Practical Approach</h6>
 
-                                    <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Upgrade your body at Gymso Fitness</h1>
+                                    <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Upgrade your Learning PCM CLASSES</h1>
 
                                     <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>
 
