--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>PCM CLASSES</title>
+     <title>Gymso Fitness HTML Template</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -14,6 +14,13 @@
      <link rel="stylesheet" href="css/bootstrap.min.css">
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/aos.css">
+
+     <!-- MAIN CSS -->
+     <link rel="stylesheet" href="css/tooplate-gymso-style.css">
+<!--
+Tooplate 2119 Gymso Fitness
+https://www.tooplate.com/view/2119-gymso-fitness
+-->
 </head>
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
@@ -21,7 +28,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="index.html">PCM CLASSES</a>
+            <a class="navbar-brand" href="index.html">Gymso Fitness</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -73,9 +80,9 @@
                          <div class="col-lg-8 col-md-10 mx-auto col-12">
                               <div class="hero-text mt-5 text-center">
 
-                                    <h6 data-aos="fade-up" data-aos-delay="300">Learning through a Practical Approach</h6>
+                                    <h6 data-aos="fade-up" data-aos-delay="300">new way to build a healthy lifestyle!</h6>
 
-                                    <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Upgrade your Learning PCM CLASSES</h1>
+                                    <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">Upgrade your body at Gymso Fitness</h1>
 
                                     <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>
 
@@ -400,18 +407,18 @@
                <div class="row">
 
                     <div class="ml-auto col-lg-4 col-md-5">
-                        <p class="copyright-text">PCM CLASSES
+                        <p class="copyright-text">Copyright &copy; 2020 Gymso Fitness Co.
                         
-                        <br>Design:<a href="https://www.youtube.com/channel/UCjhKFZT1ttBCDFXP59GCE7g">Harshit</a></p>
+                        <br>Design: <a href="https://www.tooplate.com">Tooplate</a></p>
                     </div>
 
                     <div class="d-flex justify-content-center mx-auto col-lg-5 col-md-7 col-12">
                         <p class="mr-4">
                             <i class="fa fa-envelope-o mr-1"></i>
-                            <a href="#">harshitasthana00052@gmail.com</a>
+                            <a href="#">hello@company.co</a>
                         </p>
 
-                        <p><i class="fa fa-phone mr-1"></i> 6207830468</p>
+                        <p><i class="fa fa-phone mr-1"></i> 010-020-0840</p>
                     </div>
                     
                </div>
