--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     <div class="row">
 
                             <div class="col-lg-12 col-12 text-center">
-                                <h6 data-aos="fade-up">our weekly GYM schedules</h6>
+                                <h6 data-aos="fade-up">our weekly CLASS schedules</h6>
 
-                                <h2 class="text-white" data-aos="fade-up" data-aos-delay="200">Workout Timetable</h2>
+                                <h2 class="text-white" data-aos="fade-up" data-aos-delay="200">Class Timetable</h2>
                              </div>
 
                              <div class="col-lg-12 py-5 col-md-12 col-12">
@@ -280,17 +280,17 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                          <tr>
                                             <td><small>7:00 am</small></td>
                                             <td>
-                                                <strong>Cardio</strong>
+                                                <strong>Maths</strong>
                                                 <span>7:00 am - 9:00 am</span>
                                             </td>
                                             <td>
-                                                <strong>Power Fitness</strong>
+                                                <strong>Science</strong>
                                                 <span>7:00 am - 9:00 am</span>
                                             </td>
                                             <td></td>
                                             <td></td>
                                             <td>
-                                                <strong>Yoga Section</strong>
+                                                <strong>S.St</strong>
                                                 <span>7:00 am - 9:00 am</span>
                                             </td>
                                          </tr>
@@ -300,16 +300,16 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                             <td></td>
                                             <td></td>
                                             <td>
-                                                <strong>Boxing</strong>
+                                                <strong>Hindi</strong>
                                                 <span>8:00 am - 9:00 am</span>
                                             </td>
                                             <td>
-                                                <strong>Areobic</strong>
+                                                <strong>Maths</strong>
                                                 <span>8:00 am - 9:00 am</span>
                                             </td>
                                             <td></td>
                                             <td>
-                                                <strong>Cardio</strong>
+                                                <strong>G.K</strong>
                                                 <span>8:00 am - 9:00 am</span>
                                             </td>
                                          </tr>
@@ -318,16 +318,16 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                             <td><small>11:00 am</small></td>
                                             <td></td>
                                             <td>
-                                                <strong>Boxing</strong>
+                                                <strong>Technical</strong>
                                                 <span>11:00 am - 2:00 pm</span>
                                             </td>
                                             <td>
-                                                <strong>Areobic</strong>
+                                                <strong>Sanskrit</strong>
                                                 <span>11:30 am - 3:30 pm</span>
                                             </td>
                                             <td></td>
                                             <td>
-                                                <strong>Body work</strong>
+                                                <strong>English</strong>
                                                 <span>11:50 am - 5:20 pm</span>
                                             </td>
                                          </tr>
@@ -335,21 +335,21 @@ https://www.tooplate.com/view/2119-gymso-fitness
                                          <tr>
                                             <td><small>2:00 pm</small></td>
                                             <td>
-                                                <strong>Boxing</strong>
+                                                <strong>Science</strong>
                                                 <span>2:00 pm - 4:00 pm</span>
                                             </td>
                                             <td>
-                                                <strong>Power lifting</strong>
+                                                <strong>Maths</strong>
                                                 <span>3:00 pm - 6:00 pm</span>
                                             </td>
                                             <td></td>
                                             <td>
-                                                <strong>Cardio</strong>
+                                                <strong>subject</strong>
                                                 <span>6:00 pm - 9:00 pm</span>
                                             </td>
                                             <td></td>
                                             <td>
-                                                <strong>Crossfit</strong>
+                                                <strong>subject</strong>
                                                 <span>5:00 pm - 7:00 pm</span>
                                             </td>
                                          </tr>
@@ -384,7 +384,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     <div class="mx-auto mt-4 mt-lg-0 mt-md-0 col-lg-5 col-md-6 col-12">
                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="600">Where you can <span>find us</span></h2>
 
-                        <p data-aos="fade-up" data-aos-delay="800"><i class="fa fa-map-marker mr-1"></i> 120-240 Rio de Janeiro - State of Rio de Janeiro, Brazil</p>
+                        <p data-aos="fade-up" data-aos-delay="800"><i class="fa fa-map-marker mr-1"></i>PCM CLASSES-Near Bharat Maa Mandir-Chandi-Nalanda,Bihar</p>
 <!-- How to change your own map point
 	1. Go to Google Maps
 	2. Click on your location point
@@ -407,18 +407,18 @@ https://www.tooplate.com/view/2119-gymso-fitness
                <div class="row">
 
                     <div class="ml-auto col-lg-4 col-md-5">
-                        <p class="copyright-text">Copyright &copy; 2020 Gymso Fitness Co.
+                        <p class="copyright-text">Copyright &copy; 2020 PCM CLASSES
                         
-                        <br>Design: <a href="https://www.tooplate.com">Tooplate</a></p>
+                        <br>Design: <a href="https://www.tooplate.com">Harshit</a></p>
                     </div>
 
                     <div class="d-flex justify-content-center mx-auto col-lg-5 col-md-7 col-12">
                         <p class="mr-4">
                             <i class="fa fa-envelope-o mr-1"></i>
-                            <a href="#">hello@company.co</a>
+                            <a href="#">harshitasthana00052@gmail.com</a>
                         </p>
 
-                        <p><i class="fa fa-phone mr-1"></i> 010-020-0840</p>
+                        <p><i class="fa fa-phone mr-1"></i> +91-6207830468</p>
                     </div>
                     
                </div>
